# word-search-puzzle-solver

./: .gitignore  CMakeLists  CMakeLists.txt  CMakeSettings.json  README.md
cxxopts/: cxxopts.hpp
data/: uk.dic
puzzle-generator/: CMakeLists.txt  PuzzleGenerator.cpp  PuzzleGenerator.h  puzzle-gen.cpp
src/: CMakeLists.txt  Puzzle.cpp  Puzzle.h  PuzzleGenerator.cpp  PuzzleGenerator.h  PuzzleIterator.h  PuzzleSolver.cpp  PuzzleSolver.h  Timer.h  WordList.cpp  WordList.h  main.cpp
tests/: CMakeLists.txt  Puzzle-test.cpp  PuzzleGenerator-test.cpp  PuzzleIterator-test.cpp  PuzzleSolver-test.cpp  main.cpp
